// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/styled.macro basic 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"eddbda30\\",
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");"
`;

exports[`@emotion/styled.macro call-expression 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled('div')\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled('div', {
  target: \\"e1wwfyhh0\\",
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");"
`;

exports[`@emotion/styled.macro label 1`] = `
"import styled from '@emotion/styled.macro'

class Thing {
  static SomeComponent = styled.div\`
    color: hotpink;
  \`
  BadIdeaComponent = styled.div\`
    background: hotpink;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

class Thing {
  static SomeComponent = _styled(\\"div\\", {
    target: \\"erkd9g00\\",
    label: \\"SomeComponent\\"
  })(\\"color:hotpink;\\");
  BadIdeaComponent = _styled(\\"div\\", {
    target: \\"erkd9g01\\",
    label: \\"BadIdeaComponent\\"
  })(\\"background:hotpink;\\");
}"
`;

exports[`@emotion/styled.macro multiple-calls 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div\`
  color: hotpink;
\`

const SomeOtherComponent = styled.button\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"e15zzbw00\\",
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");

const SomeOtherComponent = _styled(\\"button\\", {
  target: \\"e15zzbw01\\",
  label: \\"SomeOtherComponent\\"
})(\\"color:green;\\");"
`;

exports[`@emotion/styled.macro object 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div({ color: 'hotpink' })


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  target: \\"es0jczh0\\",
  label: \\"SomeComponent\\"
})({
  color: 'hotpink'
});"
`;
